# langgraph-genui

./: .dockerignore  .env.example  CLAUDE.md  DOCKER_SETUP.md  README.md  clean.sh  docker-compose.yml  env.example  help.sh  langgraph.json  logs.sh  pbcopy  pip.conf  restart.sh  start.sh  status.sh  stop.sh
.github/workflows/: claude-code-review.yml  claude.yml
agent/: Dockerfile  env.template  langgraph.json  pyproject.toml  requirements.txt
agent/src/agent/: graph.py  ui-simple.tsx  ui.tsx
chatui/: Dockerfile
chatui/src/components/thread/messages/: ai.tsx
chatui/src/components/weather/: WeatherCard.tsx
src/agent/: ui.tsx
tests/: conftest.py
tests/integration_tests/: test_graph.py
